@@ -4,7 +4,7 @@ include $(top_srcdir)/build-aux/build-aux.mk
 ACLOCAL_AMFLAGS = -I build-aux -I sdk
 
 SUBDIRS = jpeg-6b libport libport/tests sdk src . doc
-SVN_EXTERNALS += jpeg-6b sdk
+SVN_EXTERNALS += jpeg-6b sdk libport
 
 
 ## ---------- ##
