@@ -1,5 +1,14 @@
+include $(top_srcdir)/build-aux/init.mk
+
 SUBDIRS = liburbi 
 
 if EXAMPLES
 SUBDIRS += utils examples
 endif
+
+## ------------ ##
+## version.hh.  ##
+## ------------ ##
+
+REVISION_FILE = version.hh
+include $(top_srcdir)/build-aux/revision.mk
